# jean-pierre-code

./: .gitignore  Cargo.toml  README.md
src/: actions.rs  cli.rs  config.rs  context.rs  exec.rs  local_llm.rs  main.rs  remote.rs
