[package]
name = "jean-pierre-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
glob = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
# Use Kalosm for local LLM inference (always on)
# As requested, enable full feature set from the git repository.
kalosm = { git = "https://github.com/floneum/floneum", package = "kalosm", features = ["full"] }

# No optional features: local LLM via Kalosm is always enabled.
